cabal-version:      2.4
name:               enmyshev
version:            1.0.0
synopsis:           Simple encoder for Myshev labwork

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             qualimock
maintainer:         qualimock@gmail.com

-- A copyright notice.
-- copyright:
category:           Codec
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Convert,
                      Encode

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      utf8-string,
                      bytestring,
                      random
    hs-source-dirs:   src
    default-language: Haskell2010

executable enmyshev
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        bytestring,
        enmyshev

    hs-source-dirs:   app
    default-language: Haskell2010
